# EntrainmentTimesManifolds

./: README.md
AUTO/: AccuracyParameters.numbers
AUTO/Bifurcations/: c.fjk2Db.N  c.fjk2Db.lt  c.fjk2Db.lux  c.fjk2Db.luxN  c.fjk2Db.luxpo  c.fjk2Db.taux  fjk2Dbifurcations.f90  fjk2Dbifurcations.py
AUTO/Manifolds/: c.fjk2Dm.1  c.fjk2Dm.N  c.fjk2Dm.T  c.fjk2Dm.orb  fjk2Dmanifolds.f90  fjk2Dmanifolds.py
CUDA/: CMakeLists.txt  CUDAKernels.cu  CUDAKernels.hpp  Driver.cu  EntrainmentTimeFinder.cu  EntrainmentTimeFinder.hpp  Kronauer.cu  Kronauer.hpp  Makefile  NonlinearProblem.cu  NonlinearProblem.hpp  RungeKuttaSolver.cu  RungeKuttaSolver.hpp  cu_error_functions.hpp  parameters.hpp
MATLAB/PhasePlaneManifolds/: Batenburg_I_50.eps  Batenburg_I_50.tif  JacNumGen.m  Kronauer2SingleFS.m  Kronauer2SingleFS_lightbox.m  KronauerDoubleFS.m  KronauerJacobianFS.m  ManCheck.m  ManCheck_extendUnstable.m  ManCheck_spuriousManifolds.eps  ManCheck_spuriousManifolds_I100.eps  ManCheck_spuriousManifolds_I100.fig  ManCheck_spuriousManifolds_I160.eps  ManCheck_spuriousManifolds_I160.fig  PlotMans3D_I_50.eps  PlotMans3D_I_50.tif  PlotMans3D_I_50_nc.tif  battenberg_I_50.eps  battenberg_I_50.fig  code_for_plotting.m  find2to1PeriodicOrbitDoubleFS.m  findFloquetMultipliersDoubleFS.m  findPeriodicOrbitDoubleFS.m  integrateManifoldBackwards.m  integrateManifoldForwards.m  makeMatrix.m  manifolds_3D_I_50.eps  orbits_pp_I_1000.eps  orbits_pp_I_130.eps  orbits_pp_I_50.eps  plotManifoldShifted.m  plotManifolds3D.m  plotOrbitsTimeSeries.m  plotPoincareMap3D.m  plotPoincareMap3DWrapper.m  (+17 more)
(+2 files in other folders)
